2005-10-22  Harald Harders  <h.harders@tu-bs.de>

	* term/pslatex.trm (EPSLATEX_set_color): Fix bug in setting
	pure black or white via a gray value.

2005-10-22  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_tokenise): Fix [very] long-standing bug
	that caused only the first 3 columns of ascii matrix data to
	be read after the command:   splot "data" using 1:2:3 matrix
	Bug #1264105.

2005-10-21  Ethan Merritt  <merritt@u.washington.edu>

	* src/gp_types.h: Force enum for variable types to start at
	INTGR = 1, so that 0 (NULL) is guaranteed not to be a valid
	variable type.

	* src/util.c src/util.h (type_udv): New function returning the
	type of a user-defined variable, or 0 if there is no such udv.
	Replaces isstringvar().

	* datafile.c (plot_ticlabel_using df_readascii): Allow the
	using specs {x|y|z}ticlabel(<foo>) to accept an expression
	for <foo> rather than accepting only an integer constant.

2005-10-20  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/term.c (do_arrow): Moved misplaced declaration.

	* config/config.cyg config/config.mgw: Updated.

2005-10-19  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Update description of xticlabels(<col>).

2005-10-19  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/x11.trm (START_HELP): Update docs about window title.

2005-10-16  Ethan Merritt  <merritt@u.washington.edu>

	* src/gadgets.h: Export (BoundingBox *)clip_area, so that gnuplot
	core routines can specify clipping boundaries before calling
	clip_point() and clip_line().

	* src/term.c (do_arrow): clip all lines in arrow to the canvas.
	Bug #1187336.

	* src/graph3d.c (get_arrow3d): Since arrow clipping is now
	handled properly in do_arrow(), remove the old cruder clipping test.

	* term/pdf.trm (PDF_filled_polygon): Filled arrowheads can still
	protrude across the canvas boundary, and the pdflib routines 
	cannot deal with this due to the use of (unsigned int) for the