@@ -1,3 +1,8 @@
+2005-10-23  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/datafile.c (adjust_binary_use_spec): Interpret the command
+	"plot <foo> matrix" as equivalent to "plot <foo> matrix using 1:3".
+
 2005-10-22  Harald Harders  <h.harders@tu-bs.de>
 
 	* term/pslatex.trm (EPSLATEX_set_color): Fix bug in setting
@@ -5,7 +10,7 @@
 
 2005-10-22  Ethan Merritt  <merritt@u.washington.edu>
 
-	* src/datafile.c (df_tokenise): Fix [very] long-standing bug
+	* src/datafile.c (df_open): Fix [very] long-standing bug
 	that caused only the first 3 columns of ascii matrix data to
 	be read after the command:   splot "data" using 1:2:3 matrix
 	Bug #1264105.
